lab5_g/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
    rules:
        - host: grafana
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: prometheus-grafana
                            port:
                                number: 80
